[gd_scene load_steps=26 format=3 uid="uid://ctptm2pbq1oqo"]

[ext_resource type="VideoStream" uid="uid://cvgrannfv5p1j" path="res://assets/UI/MainMenu/Graphics/bg_loop_blurred.ogv" id="1_pcou3"]
[ext_resource type="Script" uid="uid://bws1b4is7qlrx" path="res://scripts/MainMenu/OptionsMenu.gd" id="1_urebe"]
[ext_resource type="FontFile" uid="uid://cs3ocbk0naj0c" path="res://assets/UI/Fonts/Neuropol.otf" id="2_pnkru"]
[ext_resource type="FontFile" uid="uid://creniyu20qcyq" path="res://assets/UI/Fonts/Stormfaze.otf" id="4_sxiga"]
[ext_resource type="Script" uid="uid://buiiy3hwe2nuc" path="res://scripts/MainMenu/slider.gd" id="5_ca6he"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pj0l6"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3r2d0"]
bg_color = Color(2.5268645e-07, 0, 0.26795948, 1)
corner_radius_top_left = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yktg1"]
bg_color = Color(0, 0, 0, 0.29803923)
corner_radius_top_left = 35
corner_radius_bottom_left = 35

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sxiga"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snpff"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aot03"]
bg_color = Color(2.5268645e-07, 0, 0.26795948, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_etk1h"]
bg_color = Color(0, 0, 0, 0.29803923)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6upjb"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_right = 35
corner_radius_bottom_right = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4s2q"]
bg_color = Color(2.5268645e-07, 0, 0.26795948, 1)
corner_radius_top_right = 35
corner_radius_bottom_right = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfe86"]
bg_color = Color(0, 0, 0, 0.29803923)
corner_radius_top_right = 35
corner_radius_bottom_right = 35

[sub_resource type="DPITexture" id="DPITexture_sxiga"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#fefefe\" fill-opacity=\".75\"/></svg>
"
base_scale = 2.0

[sub_resource type="DPITexture" id="DPITexture_ca6he"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#fefefe\"/></svg>
"
base_scale = 2.0

[sub_resource type="DPITexture" id="DPITexture_snpff"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"7\" fill=\"#fefefe\" fill-opacity=\".37\"/></svg>
"
base_scale = 1.5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_sxiga"]
color = Color(1, 1, 1, 1)
grow_begin = -3.0
grow_end = -3.0
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ca6he"]
color = Color(0.011294988, 0, 0.66424143, 1)
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_snpff"]
color = Color(0.011294988, 0, 0.66424143, 1)
thickness = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urebe"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxiga"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ca6he"]
bg_color = Color(0, 0, 0, 0.6784314)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_snpff"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_urebe")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("1_pcou3")
volume_db = -80.0
autoplay = true
expand = true
loop = true

[node name="SceneRoot" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsTitle" type="Label" parent="SceneRoot"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("4_sxiga")
theme_override_font_sizes/font_size = 70
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenu" type="MarginContainer" parent="SceneRoot"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="Options" type="HBoxContainer" parent="SceneRoot/OptionsMenu"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GraphicsSettingsBtn" type="Button" parent="SceneRoot/OptionsMenu/Options"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_pj0l6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3r2d0")
theme_override_styles/hover = SubResource("StyleBoxFlat_yktg1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sxiga")
toggle_mode = true
text = "DISPLAY"

[node name="SoundSettingsBtn" type="Button" parent="SceneRoot/OptionsMenu/Options"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_snpff")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aot03")
theme_override_styles/hover = SubResource("StyleBoxFlat_etk1h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sxiga")
toggle_mode = true
text = "SOUND"

[node name="ProfileSettingsBtn" type="Button" parent="SceneRoot/OptionsMenu/Options"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_snpff")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aot03")
theme_override_styles/hover = SubResource("StyleBoxFlat_etk1h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sxiga")
toggle_mode = true
text = "GAME PROFILE"

[node name="ControlsSettingsBtn" type="Button" parent="SceneRoot/OptionsMenu/Options"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_6upjb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s4s2q")
theme_override_styles/hover = SubResource("StyleBoxFlat_dfe86")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sxiga")
toggle_mode = true
text = "CONTROLS"

[node name="MainContentBox" type="MarginContainer" parent="SceneRoot"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="GRAPHICS" type="Panel" parent="SceneRoot/MainContentBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftRoot" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer/BoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Label" type="Label" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 30
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 40

[node name="OptionButton" type="OptionButton" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1440x1080"
popup/item_1/id = 1
popup/item_2/text = "2560x1440"
popup/item_2/id = 2
popup/item_3/text = "4096x2160"
popup/item_3/id = 3

[node name="BoxContainer3" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/LeftRoot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightRoot" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/RightRoot"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/RightRoot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer3" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/RightRoot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/GRAPHICS/HBoxContainer/RightRoot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SOUND" type="Panel" parent="SceneRoot/MainContentBox"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SceneRoot/MainContentBox/SOUND"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="VBoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="Label" type="Label" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 30
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicSlider" type="HSlider" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("DPITexture_sxiga")
theme_override_icons/grabber_highlight = SubResource("DPITexture_ca6he")
theme_override_icons/grabber_disabled = SubResource("DPITexture_snpff")
theme_override_styles/slider = SubResource("StyleBoxLine_sxiga")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ca6he")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_snpff")
value = 75.0
script = ExtResource("5_ca6he")
audio_bus_name = "Music"

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="Label" type="Label" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 30
text = "UI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UISlider" type="HSlider" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("DPITexture_sxiga")
theme_override_icons/grabber_highlight = SubResource("DPITexture_ca6he")
theme_override_icons/grabber_disabled = SubResource("DPITexture_snpff")
theme_override_styles/slider = SubResource("StyleBoxLine_sxiga")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ca6he")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_snpff")
value = 50.0
script = ExtResource("5_ca6he")
audio_bus_name = "UI"

[node name="LeftRoot2" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="VBoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="SFXSliderTitle" type="Label" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 30
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SFXSlider" type="HSlider" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("DPITexture_sxiga")
theme_override_icons/grabber_highlight = SubResource("DPITexture_ca6he")
theme_override_icons/grabber_disabled = SubResource("DPITexture_snpff")
theme_override_styles/slider = SubResource("StyleBoxLine_sxiga")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ca6he")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_snpff")
value = 50.0
script = ExtResource("5_ca6he")
audio_bus_name = "SFX"

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="VBoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoxContainer" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="VoiceSliderTitle" type="Label" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 30
text = "Voice"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VoiceSlider" type="HSlider" parent="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("DPITexture_sxiga")
theme_override_icons/grabber_highlight = SubResource("DPITexture_ca6he")
theme_override_icons/grabber_disabled = SubResource("DPITexture_snpff")
theme_override_styles/slider = SubResource("StyleBoxLine_sxiga")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ca6he")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_snpff")
value = 50.0
script = ExtResource("5_ca6he")
audio_bus_name = "Voice"

[node name="CONTROLS" type="Panel" parent="SceneRoot/MainContentBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="SceneRoot/MainContentBox/CONTROLS"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 139.0
text = "Kontrole"

[node name="PROFILE" type="Panel" parent="SceneRoot/MainContentBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="SceneRoot/MainContentBox/PROFILE"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 139.0
text = "Profil"

[node name="ReturnBtnMargin" type="MarginContainer" parent="SceneRoot"]
layout_mode = 2
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ReturnBtn" type="Button" parent="SceneRoot/ReturnBtnMargin"]
custom_minimum_size = Vector2(350, 100)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_pnkru")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_urebe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sxiga")
theme_override_styles/hover = SubResource("StyleBoxFlat_ca6he")
theme_override_styles/focus = SubResource("StyleBoxEmpty_snpff")
text = "RETURN"

[connection signal="pressed" from="SceneRoot/OptionsMenu/Options/GraphicsSettingsBtn" to="." method="_on_graphics_settings_btn_pressed"]
[connection signal="pressed" from="SceneRoot/OptionsMenu/Options/SoundSettingsBtn" to="." method="_on_sound_settings_btn_pressed"]
[connection signal="pressed" from="SceneRoot/OptionsMenu/Options/ProfileSettingsBtn" to="." method="_on_profile_settings_btn_pressed"]
[connection signal="pressed" from="SceneRoot/OptionsMenu/Options/ControlsSettingsBtn" to="." method="_on_controls_settings_btn_pressed"]
[connection signal="value_changed" from="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer2/MusicSlider" to="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer2/MusicSlider" method="_on_value_changed"]
[connection signal="value_changed" from="SceneRoot/MainContentBox/SOUND/HBoxContainer/Left/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer/BoxContainer2/UISlider" to="." method="_on_ui_slider_value_changed"]
[connection signal="value_changed" from="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer/MarginContainer/HBoxContainer/BoxContainer2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="SceneRoot/MainContentBox/SOUND/HBoxContainer/LeftRoot2/HBoxContainer/BoxContainer2/MarginContainer/HBoxContainer/BoxContainer2/VoiceSlider" to="." method="_on_voice_slider_value_changed"]
[connection signal="pressed" from="SceneRoot/ReturnBtnMargin/ReturnBtn" to="." method="_on_return_btn_pressed"]
